<resources>
    <string name="app_name">Android Chess</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="host_button">Host game</string>
    <string name="join_button">Join</string>
    <string name="game_search">Scanning local network for games...</string>
    <string name="game_host">Create a game lobby</string>
    <string name="game_host_title">Create lobby</string>
    <string name="setting_cheats_enabled" />
    <string name="game_host_searching_enemy">Searching enemy...</string>
    <string name="name">Name</string>
    <string name="test_game">Test Game</string>
    <string name="logger">Server logger</string>
</resources>